// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Verify RDS Model level Auth rules on queries: related models with same groups auth field name but different type should transform correctly 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "allowedGroups":   ["Admin"],
  "groupClaim": "cognito:groups",
  "allowedFields":   ["id", "name", "groupsField", "profile"]
}))
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "groupsFieldName": "groupsField",
  "groupsFieldType": "string",
  "groupClaim": "cognito:groups",
  "allowedFields":   ["id", "name", "groupsField", "profile"]
}))
#set( $authResult = $util.authRules.mutationAuth($authRules, "update", $ctx.args.input, $ctx.result) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authorizedInput) )
  #set( $ctx.args.input = $authResult.authorizedInput )
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: related models with same groups auth field name but different type should transform correctly 2`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "allowedGroups":   ["Admin"],
  "groupClaim": "cognito:groups",
  "allowedFields":   ["id", "name", "groupsField", "profile"]
}))
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "groupsFieldName": "groupsField",
  "groupsFieldType": "string",
  "groupClaim": "cognito:groups",
  "allowedFields":   ["id", "name", "groupsField", "profile"]
}))
#set( $authResult = $util.authRules.mutationAuth($authRules, "delete", $ctx.args.input, $ctx.result) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authorizedInput) )
  #set( $ctx.args.input = $authResult.authorizedInput )
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: related models with same groups auth field name but different type should transform correctly 3`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "allowedGroups":   ["Admin"],
  "groupClaim": "cognito:groups",
  "allowedFields":   ["id", "details", "groupsField", "userId", "user"]
}))
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "allowedGroups":   ["Dev"],
  "groupClaim": "cognito:groups",
  "allowedFields":   ["id", "details", "groupsField", "userId", "user"]
}))
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "groupsFieldName": "groupsField",
  "groupsFieldType": "string[]",
  "groupClaim": "cognito:groups",
  "allowedFields":   ["id", "details", "groupsField", "userId", "user"]
}))
#set( $authResult = $util.authRules.mutationAuth($authRules, "create", $ctx.args.input, null) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
#if( $authResult && !$util.isNullOrEmpty($authResult.authorizedInput) )
  #set( $ctx.args.input = $authResult.authorizedInput )
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: related models with same groups auth field name but different type should transform correctly 4`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "allowedGroups":   ["Admin"],
  "groupClaim": "cognito:groups"
}))
$util.qr($authRules.add({
  "type": "public",
  "provider": "apiKey"
}))
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "groupsFieldName": "groupsField",
  "groupsFieldType": "string[]",
  "groupClaim": "cognito:groups"
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
$util.qr($ctx.stash.put("authRules", $authRules))
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: related models with same groups auth field name but different type should transform correctly 5`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "allowedGroups":   ["Admin"],
  "groupClaim": "cognito:groups"
}))
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "allowedGroups":   ["Dev"],
  "groupClaim": "cognito:groups"
}))
$util.qr($authRules.add({
  "type": "groups",
  "provider": "userPools",
  "groupsFieldName": "groupsField",
  "groupsFieldType": "string[]",
  "groupClaim": "cognito:groups"
}))
#set( $authResult = $util.authRules.queryAuth($authRules) )
#if( !$authResult || ($authResult && !$authResult.authorized) )
  $util.unauthorized()
#end
$util.qr($ctx.stash.put("authRules", $authRules))
#if( $authResult && !$util.isNullOrEmpty($authResult.authFilter) )
  #set( $ctx.stash.authFilter = $authResult.authFilter )
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 1`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "private",
  "provider": "userPools"
}))
#set( $authResult = $util.authRules.validateUsingSource($authRules, $ctx.source) )
#if( !$authResult )
  $util.unauthorized()
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 2`] = `
"## [Start] Checking for allowed operations which can return this field. **
#set( $operation = $util.defaultIfNull($ctx.source.get("__operation"), null) )
#if( $operation == "Mutation" )
  $util.toJson(null)
#else
  $util.toJson($context.source["authors"])
#end
## [End] Checking for allowed operations which can return this field. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 3`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "private",
  "provider": "userPools"
}))
#set( $authResult = $util.authRules.validateUsingSource($authRules, $ctx.source) )
#if( !$authResult )
  $util.unauthorized()
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 4`] = `
"## [Start] Checking for allowed operations which can return this field. **
#set( $operation = $util.defaultIfNull($ctx.source.get("__operation"), null) )
#if( $operation == "Mutation" )
  $util.toJson(null)
#else
  $util.toJson($context.source["owner"])
#end
## [End] Checking for allowed operations which can return this field. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 5`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "owner",
  "provider": "userPools",
  "ownerFieldName": "owner",
  "ownerFieldType": "string",
  "identityClaim": "user_id"
}))
#set( $authResult = $util.authRules.validateUsingSource($authRules, $ctx.source) )
#if( !$authResult )
  $util.unauthorized()
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 6`] = `
"## [Start] Checking for allowed operations which can return this field. **
#set( $operation = $util.defaultIfNull($ctx.source.get("__operation"), null) )
#if( $operation == "Mutation" )
  $util.toJson(null)
#else
  $util.toJson($context.source["ownerContent"])
#end
## [End] Checking for allowed operations which can return this field. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 7`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "owner",
  "provider": "userPools",
  "ownerFieldName": "authors",
  "ownerFieldType": "string[]"
}))
#set( $authResult = $util.authRules.validateUsingSource($authRules, $ctx.source) )
#if( !$authResult )
  $util.unauthorized()
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 8`] = `
"## [Start] Checking for allowed operations which can return this field. **
#set( $operation = $util.defaultIfNull($ctx.source.get("__operation"), null) )
#if( $operation == "Mutation" )
  $util.toJson(null)
#else
  $util.toJson($context.source["ownersContent"])
#end
## [End] Checking for allowed operations which can return this field. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 9`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "private",
  "provider": "userPools"
}))
#set( $authResult = $util.authRules.validateUsingSource($authRules, $ctx.source) )
#if( !$authResult )
  $util.unauthorized()
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 10`] = `
"## [Start] Checking for allowed operations which can return this field. **
#set( $operation = $util.defaultIfNull($ctx.source.get("__operation"), null) )
#if( $operation == "Mutation" )
  $util.toJson(null)
#else
  $util.toJson($context.source["privateContent"])
#end
## [End] Checking for allowed operations which can return this field. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 11`] = `
"## [Start] Authorization rules. **
$util.qr($ctx.stash.put("hasAuth", true))
#set( $authRules = [] )
#if( $ctx.stash.adminRoles && $ctx.stash.adminRoles.size() > 0 )
  $util.qr($authRules.add({
  "provider": "iam",
  "type": "admin",
  "strict": false,
  "roles": $ctx.stash.adminRoles
}))
#end
$util.qr($authRules.add({
  "type": "public",
  "provider": "apiKey"
}))
#set( $authResult = $util.authRules.validateUsingSource($authRules, $ctx.source) )
#if( !$authResult )
  $util.unauthorized()
#end
$util.toJson({"version":"2018-05-29","payload":{}})
## [End] Authorization rules. **"
`;

exports[`Verify RDS Model level Auth rules on queries: should successfully transform different field auth rules 12`] = `
"## [Start] Checking for allowed operations which can return this field. **
#set( $operation = $util.defaultIfNull($ctx.source.get("__operation"), null) )
#if( $operation == "Mutation" )
  $util.toJson(null)
#else
  $util.toJson($context.source["publicContent"])
#end
## [End] Checking for allowed operations which can return this field. **"
`;
